adding check in demo for inline code complete

--- a/kitchen-sink.html
+++ b/kitchen-sink.html
@@ -246,6 +246,14 @@
       </td>
     </tr>
     <tr>
+      <td >
+        <label for="enableLiveAutocompletion">Live auto completion</label>
+      </td>
+      <td>
+        <input type="checkbox" id="enableLiveAutocompletion" checked>
+      </td>
+    </tr>
+    <tr>
       <td colspan="2">
         <input type="button" value="Edit Snippets" onclick="env.editSnippets()">
       </td>
